# Person-Follow-using-HyperIMU

./: .gitignore  CMakeLists.txt  LICENSE  README.md  himu_sensor.py  package.xml  singleGoal.py
launch/: person_follow.launch
src/: goal_data.py
