<?xml version="1.0"?>
<package format="2">
  <name>person_follow</name>
  <version>1.0.0</version>
  <description>
    Person following for mobile robots using foot-mounted smartphone IMU data
    and Pedestrian Dead Reckoning (PDR).
  </description>

  <maintainer email="anirban.web2017@gmail.com">Anirban Dam</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>tf</depend>
</package>
